# ChangeLog for dev-python/bottleneck
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/bottleneck/ChangeLog,v 1.4 2014/01/14 13:55:58 ago Exp $

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bottleneck-0.6.0.ebuild:
  Stable for x86, wrt bug #497872

  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> bottleneck-0.6.0.ebuild:
  amd64 stable, bug #497872

*bottleneck-0.7.0 (12 Jan 2014)

  12 Jan 2014; Justin Lecher <jlec@gentoo.org> +bottleneck-0.7.0.ebuild:
  Verion BUmp

*bottleneck-0.6.0 (04 May 2013)

  04 May 2013; Justin Lecher <jlec@gentoo.org> +bottleneck-0.6.0.ebuild,
  +metadata.xml:
  New addition, written by me