@@ -3,24 +3,16 @@ Hash: SHA256
 
 DIST Bottleneck-0.6.0.tar.gz 3171952 SHA256 eddfdc0492e7b0d2749d4a8861503186446d09d73f3eeb3f064a80313ded2f65 SHA512 dfd477053953c36b6b1934c2ef6eb89a6adf1689ff92da76c2a0960f31432c175d972ac54157b899d882b2af2583dec43dcfd9e33bcc0e2c1de297f2425e2c9b WHIRLPOOL 95d02bc5ba2e331ddea05367dc260123d8ef5c359794bc73b0e7ef4e7ef9a37991fee44c4d8a20cf07a6a19695c9e64f1e2a8e55aab61f2ddd66fa947f4e4c51
 DIST Bottleneck-0.7.0.tar.gz 1634309 SHA256 8d7bc7eac458632603fc10c71f26c0f9f976293ff394f48efae6ecd4c79b21fc SHA512 6bc077997624da3d29f71a5fcc70fb5dcfe3afab02fefe6c75de1e4bc689886532c7c1ae5f4aec5d73b24d456d8d7b9409817cb6bb857accaf275a0b42f281f7 WHIRLPOOL fb3877339acd241f3e280c349aabafb4cccc987a2ad3a9c637930a51f71053e2bda9aa7ddecdc2533cd0f13987546e63a3437866b524cbf6bf057ba43a8a2880
+DIST Bottleneck-0.8.0.tar.gz 1634340 SHA256 f0a980510239f685ebaf4dbc8c9f0e55ac964312e0d11c551208c250d22cc64b SHA512 5b03ce2d0df9d177534d3f1fa02f147b12b23f5fbaa3b2685d1e8b86848c96c54832e0b0b6364479841742785c0b23bcccb51a0ac95675c72efc39693121dcaf WHIRLPOOL 873559617ad5114b953b9824da57bf7d393aa04372ad3c44307fecd875a076864d2509bed4b214372549db97a6c617f5471d1e723ff1a668a3240b7c6ed84a25
 EBUILD bottleneck-0.6.0.ebuild 956 SHA256 36bdcdf94dcb2266226a35de0404922c2d8093c5498db4c9b7949fcf8656fecf SHA512 b490b91c8485d288db14a76c294f32b747358128b5fcaea747ffb917f907c1a76c4952b2f3acf01b432d7cfea615d376f26388e2b894a27cc29ade2cf3ac8dfc WHIRLPOOL 66cbb1d511ea473eea894b4b6290be46f5553f15d622602ba6b9be83416c55712fb375f3a990e4ab6d6560586495f95d373fbf28543d10488b69eeea432c801c
 EBUILD bottleneck-0.7.0.ebuild 1032 SHA256 0195739e68a5b352509cddb24fdb95bc81a577351e1820e51304de24e61af4e7 SHA512 0618e5d15b64c387068b6a53650240fb118726c943e4ff5515c1e35798537d31a9ce4dd3facb307f5f7b8dd43754a27aaf83c753c7e691b4e9f8d844c96a983b WHIRLPOOL e7f415b01f7c8ee0a7a2298ea8a419cd1b1aaa81ab38a1ebc57e5c9c41091f4801c7ade4ab001468245c0f281f605ce9c8a07193295fbcccf63ea6d62ed7f820
-MISC ChangeLog 695 SHA256 6c262a287dd859d5fe72491efb645ef03a754230a47ddbfd0a11d6ba736ee6e6 SHA512 9d2c07b6b5fb7fc4638b8465bdc384a2bcbc39c631fd510a78bb5523bb1c62321f420016874c355310c6b3f9fc07ecfa14ae9fde3c6c9e050ec0cafb6daf4281 WHIRLPOOL 69ad7fc5c93862125584e6917926fa3c93761cb615f25832de954d49ad3d3c492c6db7186d19e02bb7f4d2ccb4aa11fd4dc9a1a3ad5dfe4fc267e2a72428ee9d
-MISC metadata.xml 170 SHA256 b08fa923802a96ca5f5bf41ada6e97e36cffca9dd98fa45c5c53302051eec44f SHA512 97181e4ec5c222f59880cc96eddec0145cc210f6cbb1353b7e7961efe7aeae30c37bfd6ffec2ecc706bd06ac46a2c3e11bf8010dd111a22481076c6c542e4c1b WHIRLPOOL 831d51372c3b0ad9b4a014d0dda2d2efd4bdb111a4b96e79d8a97fd3e7c3e54e794cc146afd79242418ba6692806f720c831e9e3d2ae49800291e53f4cf2750e
+EBUILD bottleneck-0.8.0.ebuild 953 SHA256 132648230c224e34156d25524695e14c2d43b59cdd17c59301ad4af14ecac85c SHA512 bff9174fea2129fd995269c18da099b84d919add1c3de8fc02f09d23311f71443f11532a8d89d8bf2d184efd53bb6419664fd1a34dc82fcd6b3ac72bcce054ff WHIRLPOOL ec3ba7f241c74dae11e6328e42bac78a6318060458558e4c5e24050f660ea92ef02413c4abf386111b97406636fdd7b77da468130b2a02cb10d50405ddc01307
+MISC ChangeLog 846 SHA256 528e4b6ea3dd458d75bade393d3f79bb2dbfde6d425e66075174135a1d44759b SHA512 2bcbbc7a72fe987abeea9f0abacae3e11d973a586b5b74de9d350f9e6cc2b94cf2dd16d6f3c6ccbc11b70afe9e821f50dc868da9b7ef1a4d1359031dc311c0bd WHIRLPOOL a7b40181c6858a8d1c5dbef7e94c6213496614a1741345c8f247b64eb65258970dc9534c4cda63a7900dc2fa125c9c077eb172d4427054c84007362c525fb8bd
+MISC metadata.xml 356 SHA256 edc55fb5a2d5026484688ffd5d8a2a7864d32a2f3c0de34dc9791ac28201218c SHA512 05c7decdb94a34abc69d0799828985629ad76cebafebe85dc4d8198d3aceab2f29e42d22a3e56c07ee8565e1d2793c9cf2052d02fd80c25a5d1194be7d086693 WHIRLPOOL 8374b69a6522f6b6407af71371689c404860e77ac60366f498b99f8cbdc3a64e701713a6ee6587f938f903dd68be97be3f3d17dfe67c99c4acc70b65c44c97d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS1UHvAAoJELp701BxlEWfG/IP/ieSe8OlCWja+g6lIsRWxdjF
-6FxgY2ga/XurjWPcIyL00xzqc/7Gb3BQAUbma417oB6dMA8nMSMeGxyUWO6CvUoR
-MKYd4+xrJ/1E1gsf1mtnU/GVKThOgXN4I5isIi4cgoqHe07WkVXoHmKTV4PXcQuL
-reXE9BqF0Y+HIVM/nDRDRuCHY5gGgE1cczDRbwJVEyQOp96pC4SR+Ff+qrw/OMYJ
-eXpDGKh8QdPqp6dIwcBrh8nbCflj6ohLyTyVlN8cGnk+MsGWrJg3ShYmUoCeML5L
-T0EbnQ0TMXShZJecf6OWmK44slnAUGF0fFVesR8xsiLBsmaeZiqxeDQKF+VHsvHp
-/RlJfPGdgBEh+rndnZdIdEhrEbRttuUGJORAYi8F7FALrLPn7t7IL8Q75e0VyYL2
-KtGxcrTJoLWBVi4LykJ5cxITQZvRn6rWf3LW89xmP5RPD5siso4Gh/L5AEBfisvz
-cM2dECwau5jdaylopoD1X0sI1kfDo6jTyduZicMso0JUWxTSGoUW8r3jN0QoA8j8
-3CHDZfA/V6os+b7Z381s0wdksUWaIwlDWrhfKtP7d+IBmjTw/LHlc0tFYueB5yuF
-4b45xDLMjgVVzD0DFPPzSxyS7DsBL3HzaozSwkqnSb1RiFgA/w2gEjcKmiA7P4Rh
-qINoiMLLJqE+9zKg8XzN
-=Jyjn
+iEYEAREIAAYFAlLu494ACgkQ1ycZbhPLE2BckQCgooqpt1kOfIwkLEP13IuZsImK
+LiMAoKXkjwaSt/DW/cpmI4t1K9H64oBh
+=bm2B
 -----END PGP SIGNATURE-----
