@@ -2,25 +2,15 @@
 Hash: SHA256
 
 DIST patsy-0.2.0.tar.gz 315486 SHA256 1d399e504dc7c9e5f35460698dd4ebf098aa215e861ea4f5ded29e98e73740c3 SHA512 4e1028dcab58e2fc938c4f8dec0aeb148fbf7d2430855d8caa844bc19088b66a8ab9b83edc3f3066df41e751f1e0ff6d24478109be562e420da6c84e3f76763f WHIRLPOOL 2da9956373cc9bd2f13d277bcca37467ab8f5b37223f9c6bf6d59b6c69e7c54bdcc70433c990ea4a02aa424c497be08031966963721194af308cda1bb36edb13
+DIST patsy-0.2.1.tar.gz 316115 SHA256 31374ce25275813d8f1c48bdda40bba06f7a16cce7dcdfad73f43a555393d065 SHA512 b7cbd9b224081b2496292b23c134abfdd9decedfda433bc7c289b899003c527184e0ba0f729eca1f3bceceac0c43090d9b611b8b1f593df5ce2a01129fabf9f6 WHIRLPOOL 91b8bc896146e48c272429482d3294a35cbc0a46662e66b913811491b2d89005371dc6eb09f38a4a043e507fba3b359dcf3a1fc61e9bf88c462c8b9ebeb995d9
 EBUILD patsy-0.2.0.ebuild 1051 SHA256 673a6d38a231ca1a09deb9049eee891f0b9b0540e9037541ae5fdb8ec0059344 SHA512 c84850ce5c8d1f90ce7e3a7724c5a7420600f229e7f2e056890e21099aca8fef8cb41198ece9bd0669d620259731af88ea5c96b09e3fbe9106bf451baabc4ad0 WHIRLPOOL b5b8325ddf51d0f79e510049316eda4f5ea7b6a19ef50797abb07b157a3705095eebd098f31eb42bfe4a9dcc53195a83deaa15fbb7c0bcbf12f7b22835d2922d
-MISC ChangeLog 484 SHA256 1a8590d156eb6876b8b3a7ba34303f2d7ccbb94b4c8748b58a585150f363fbe0 SHA512 3176e44fe65f88e8294f1a700f42a78c86b7210be040f98f8e431c03d18eea8c898de6b3d84116c843bbb7d58ebdbfaf07f7914477fa6a1f06de0521adc83926 WHIRLPOOL bdccf923a8a53a5f03d78ace5b1ce10e1a76e5367ec7dd1a1f2014b6869905d0b19caf7fc8887e96627329fd1fc7482ba5d1baeb418a25fd413e20ffe5dc01d0
-MISC metadata.xml 387 SHA256 3130d92f352d81bb7c6dda5aa14269868a45885ba37e90e38c74a18dda2893bb SHA512 9a4bb5796f16364ed1e6d45b07b5fee33db82506caf21addb978d86c8e330d9ddbd8866a5d4bb3d83a52052b9af0ba5f34c71e682777205f55665ef28ed0c247 WHIRLPOOL c7c7b4833cc824b65b6bdd15d5ad36cc515604c54a0efd236f4af1b9a959b3ff09786831d525efaa93d94ff6ca5911433d0d6dbdd64ffa4d7fe75c849a908c1e
+EBUILD patsy-0.2.1.ebuild 1055 SHA256 9ff0d62f30b3969422a26f33994d444675bb0f484c139c5f7060757d9093e686 SHA512 2244c0c0d388fda115fee77ea6e108816e91c1f5ba557d5668cb129778f040693e59a4417edc118a43cdda6be4687afcc9bd914a7fd0df85221c61acac51a8bf WHIRLPOOL 87bfe4c88c70c93e8d95b08c44f285d0f2cd1e6b94bd0027d2079b5bc746626ab580c4be20b154342a00501ff41eee71a989fc43b60804c7b5f2e7159dafcc3a
+MISC ChangeLog 622 SHA256 61a8a1a3538622b12faaa1d1a7d970abf316c36bcea7eef5257e27b89ee3edb2 SHA512 356122125bb022bd008d23e30ae8cd1e3744907f842b6c704e3c92609acdd60979eec3d9b06d6245755a81db8d839da2da01c526acf93443f45ee217ffe978b7 WHIRLPOOL 8553ddfd6dd8cdd7bdd7e6c29a5b2de21b6a833183744628b0166a2a942cd11ab24219cc804d1e56bb8cfee611de4a8f7b0d2492b0fc8ff855462046f31e56ef
+MISC metadata.xml 453 SHA256 5422f246cae8f740b1c4c10ef5f9d327d67a83102258e10852d4fc52972b54cf SHA512 e5ae3e737a0a32d822ce98bf748e72ab2cc3b3c1a4c13eaf40998615b00e88466ca91bde5fb8a77b88279edc52b80e601e7987765c9a014d9b76735f05ab6193 WHIRLPOOL d071a88c85e4c1dd6ba20f147218f97f3f11de3b6e72d397e33b9c68c56478fadf244a1eeabc17f13b0f23f768b117017e6da522f4e407e2113d4d0f5b90e09d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSNBP2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOl6MQAMCgWnvDmxB/Zg5E5sYTu10C
-HmBmQshBKA3zT4zNG1Swj7WSBkKF1DPPeMLVn99sB9f57glE+VNPAjdKBD89fxo5
-WEJyrN3Smu/UFJ4sQbePC7hhGstC9uQxzCWHN2XNEbWqzTg2YvMXsjiO+ug0r0Nh
-Zqpr0Kvqspgygrogglgwzp41l6vUW3Oh2/3qZJ7bxXZkeZbxh2t8X9Z8osNi1iq9
-/p385V0iIXEFnDDmiDSTrF0aABgpOLlAWZguNf7Nm1Bn/MEa49CzFIhHRW2FCiDT
-5vJnEOCLzSBADKzUe/0hND5IjJIhi9KBfGVbk79l/ozaSllJTTWjUxgc4kZEWRFY
-YgQs9Gq3tbQlv5zJswHyosIzBhgZJJPWG33MSDRD5bdalbHwXOYXs3r/SZvplJiY
-keto2DiIDOaQW4KBaI1iyKO5yr0AdhPTsnJBy1NiDexGp8G08JpYNc7x7TrCXgKI
-buaqsn3UhR8jWSwYcdiPHLKelG21IllfOpjfVbmiYIVLxLvfUEHZAoWGXAmgugW6
-9EVHe58AT/BGz56hVHR44BC+KP+cCUrEGJ1fjAyGxrN4YWspNbVwoEWnMnZO+qss
-K3bU4cD0/yaOEPEN/iGorkBCJHOotU6afyoCBqSUbXhqLcPL8G08zLuS3NEJOI3P
-1gTeE3ey9ZFX7lkTcC+k
-=Kl4c
+iEYEAREIAAYFAlLu5PIACgkQ1ycZbhPLE2CsJQCeMuGVh+g4lwq1uxuv/tQaiBrY
+gDgAniamo9MmFFxNrIqGkOXJRqU+zHkP
+=O7E4
 -----END PGP SIGNATURE-----
