@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/patsy
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/patsy/ChangeLog,v 1.2 2013/09/14 07:44:16 mgorny Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/patsy/ChangeLog,v 1.3 2014/02/03 00:38:06 bicatali Exp $
+
+*patsy-0.2.1 (03 Feb 2014)
+
+  03 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> +patsy-0.2.1.ebuild,
+  metadata.xml:
+  Version bump
 
   14 Sep 2013; Michał Górny <mgorny@gentoo.org> patsy-0.2.0.ebuild:
   Call nosetests via the wrapper wrt bug #484410. Approved by gienah.
