@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/bottleneck
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bottleneck/ChangeLog,v 1.4 2014/01/14 13:55:58 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bottleneck/ChangeLog,v 1.5 2014/02/03 00:33:28 bicatali Exp $
+
+*bottleneck-0.8.0 (03 Feb 2014)
+
+  03 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> +bottleneck-0.8.0.ebuild,
+  metadata.xml:
+  Version bump
 
   14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bottleneck-0.6.0.ebuild:
   Stable for x86, wrt bug #497872
